--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,7 +1,9 @@
 .root {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    max-width: 1600px;
     background-color: #2a2c2f;
     font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+    color: white;
+    width: 1280px;
+    margin: auto;
 }
