--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,54 @@
 /* IMPORTAR FUENTES */
 
 @import url(../fonts/inter.css);
+
+/* AJUSTES GLOBALES */
+
+@import url(../blocks/root/root.css);
+
+/* BLOQUE LOGO */
+
+@import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/__image/logo__image.css);
+
+/* BLOQUE LEAD */
+
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+
+/* BLOQUE INTRO */
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__quote/intro__quote.css);
+@import url(../blocks/intro/__quote-author/intro__quote-author.css);
+@import url(../blocks/intro/__text/intro__text.css);
+
+/* BLOQUE PHOTO-GRID */
+
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
+/* BLOQUE PLACE */
+
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__artist/place__artist.css);
+@import url(../blocks/place/__artist-title/place__artist-title.css);
+@import url(../blocks/place/__description/place__description.css);
+@import url(../blocks/place/__description-text/place__description-text.css);
+@import url(../blocks/place/__button/place__button.css);
+
+/* BLOQUE COVER */
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__text/cover__text.css);
+@import url(../blocks/cover/__button/cover__button.css);
+
+/* BLOQUE FOOTER */
+
+@import url(../blocks/footer/footer.css);
