--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,3 +5,10 @@
     line-height: 1.1;
     margin: 0;
 }
+
+@media screen and (max-width: 480px) {
+    .cover__title {
+        font-size: 2rem;
+        line-height: 1.1;
+    }
+}
