--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,3 +8,9 @@
     text-align: center;
     width: 70%;
 }
+
+@media screen and (max-width: 480px) {
+    .lead__subtitle {
+        font-size: 1rem;
+    }
+}
