--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,3 +7,9 @@
     text-align: center;
     width: 70%;
 }
+
+@media screen and (max-width: 480px) {
+    .lead__title {
+        font-size: 2.5rem;
+    }
+}
