--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,3 +6,15 @@
     width: 90%;
     margin: auto;
 }
+
+@media screen and (max-width: 480px) {
+    .photo-grid {
+        grid-template: repeat(8, 1fr) / repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width: 1224px) {
+    .photo-grid {
+        grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+    }
+}
