--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,7 @@
 .footer {
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1;
     text-align: center;
-    padding-bottom: 25px;
+    padding-bottom: 20px;
 }
