--- a/blocks/intro/__quote-author/intro__quote-author.css
+++ b/blocks/intro/__quote-author/intro__quote-author.css
@@ -3,6 +3,19 @@
     font-size: 1.5rem;
     line-height: 1.4;
     margin: -25px 0 0 0;
-    width: 70%;
+    max-width: 70%;
     text-align: right;
+}
+
+@media screen and (max-width: 1224px) {
+    .intro__quote-author {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .intro__quote-author {
+        max-width: 100%;
+        margin: 0;
+    }
 }
