--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,5 +4,11 @@
     line-height: 1.7;
     margin: 0;
     padding-top: 2rem;
-    width: 70%;
+    max-width: 70%;
+}
+
+@media screen and (max-width: 1224px) {
+    .intro__text {
+        max-width: 100%;
+    }
 }
