--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,3 +4,9 @@
     line-height: 1.1;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 480px) {
+    .intro__title {
+        font-size: 2rem;
+    }
+}
