--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,11 +5,12 @@
     margin: 0 auto;
     padding-top: 5rem;
     text-align: center;
-    width: 70%;
+    max-width: 70%;
 }
 
 @media screen and (max-width: 480px) {
     .lead__title {
         font-size: 2.5rem;
+        padding-top: 3rem;
     }
 }
