--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,14 +7,17 @@
     margin: auto;
 }
 
-@media screen and (max-width: 480px) {
-    .photo-grid {
-        grid-template: repeat(8, 1fr) / repeat(1, 1fr);
-    }
-}
-
 @media screen and (max-width: 1224px) {
     .photo-grid {
         grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+        padding-top: 3rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .photo-grid {
+        grid-template: repeat(8, 1fr) / repeat(1, 1fr);
+        gap: 12;
+        padding-bottom: 1rem;
     }
 }
