--- a/blocks/place/__description-text/place__description-text.css
+++ b/blocks/place/__description-text/place__description-text.css
@@ -5,3 +5,10 @@
     margin: 0;
     padding-bottom: 20px;
 }
+
+@media screen and (max-width: 480px) {
+    .place__description-text {
+        font-size: 1rem;
+        padding: 0 10px;
+    }
+}
