--- a/blocks/intro/__quote/intro__quote.css
+++ b/blocks/intro/__quote/intro__quote.css
@@ -4,11 +4,11 @@
     line-height: 1.4;
     margin: 0;
     padding-top: 2rem;
-    max-width: 70%;
+    width: 70%;
 }
 
 @media screen and (max-width: 1224px) {
     .intro__quote {
-        max-width: 100%;
+        width: 100%;
     }
 }
