--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
     padding-top: 5rem;
     text-align: center;
-    max-width: 70%;
+    width: 70%;
 }
 
 @media screen and (max-width: 480px) {
