--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,7 +4,7 @@
     line-height: 1.1;
     margin: 0;
     text-align: left;
-    max-width: 90%;
+    width: 90%;
     grid-area: place__title;
 }
 
